<resources>
	<string name="app_name">Power Menu</string>
	<string name="app_pref_name">Power Menu Config</string>

	<string name="shutdown_fail">Failed shutting down, not installed as system app?</string>
	<string name="sleep_fail">Failed putting to sleep, please report</string>
	<string name="restart_fail">Failed rebooting, not installed as system app?</string>
	<string name="soft_reboot_fail">Failed soft rebooting, please report</string>
	<string name="screenshot_fail_file">Failed taking screenshot, try disabling "mount namespace separation" in SuperSU</string>
	<string name="screenshot_fail_screencap">Failed taking screenshot</string>
	<string name="start_activity_fail">Failed starting activity, please report</string>
	<string name="su_failed">Failed running su command, not rooted?</string>
	<string name="screenshot_succeed_fallback">Screenshot captured</string>
	<string name="overlay_permission_required">Please grant us permission to draw over other apps</string>
	<string name="overlay_permission_settings_open_failed">Failed opening Android Settings, please grant us permission to draw over other apps manually</string>
	<string name="write_storage_required">Please grant us permission in order to take screenshots</string>

	<string name="restart_mode_normal">Reboot</string>
	<string name="restart_mode_normal_or_soft">Reboot (hold to soft reboot)</string>
	<string name="restart_mode_recovery">Recovery</string>
	<string name="restart_mode_bootloader">Bootloader</string>

	<string name="install_confirm_title">Install as System App</string>
	<string name="install_confirm_content">This app makes use of features only available to system apps.\n\nSave your work before proceeding, your device will reboot automatically after the installation.</string>
	<string name="install_confirm_positive">Install</string>

	<string name="install_title">Installing...</string>
	<string name="install_content">Do not do anything. You device will reboot automatically if successful</string>
	<string name="install_failed">Failed installing, not rooted?</string>

	<string name="uninstall_title">Uninstalling...</string>
	<string name="uninstall_content">Do not do anything. You device will reboot automatically if successful</string>
	<string name="uninstall_failed">Failed uninstalling, not rooted?</string>

	<string name="shutdown_confirm_title">Ready to shut down?</string>
	<string name="shutdown_confirm_content">All unsaved work would be lost</string>

	<string name="restart_confirm_title">Ready to restart?</string>
	<string name="restart_confirm_content">@string/shutdown_confirm_content</string>

	<string name="pref_file" translatable="false">com.nkming.powermenu</string>

	<string name="pref_last_version_key" translatable="false">last_version</string>

	<string name="pref_persistent_view_category">Persistent view</string>

	<string name="pref_persistent_view_title">Enable</string>
	<string name="pref_persistent_view_summary">Persistent on-screen launcher for the app</string>
	<string name="pref_persistent_view_key" translatable="false">persistent_view</string>

	<string name="pref_config_notification_title">Notification settings</string>
	<string name="pref_config_notification_summary">Open Android Settings to customize the notifications, like priority, lock screen visibility, etc.</string>
	<string name="pref_config_notification_key" translatable="false">config_notification</string>

	<string name="pref_autohide_persistent_view_title">Hide on fullscreen</string>
	<string name="pref_autohide_persistent_view_summary">Hide the persistent view when a fullscreen app is running</string>
	<string name="pref_autohide_persistent_view_key" translatable="false">autohide_persistent_view</string>

	<string name="pref_alpha_title">Opacity</string>
	<string name="pref_alpha_summary">Adjust the opacity of the view</string>
	<string name="pref_alpha_key" translatable="false">alpha</string>

	<string name="pref_haptic_title">Haptic feedback</string>
	<string name="pref_haptic_summary">Enable haptic feedback while long clicking the button</string>
	<string name="pref_haptic_key" translatable="false">haptic</string>

	<string name="pref_others_category">Others</string>
	<string name="pref_others_category_key" translatable="false">others_category</string>

	<string name="pref_confirm_title">Confirm non-trivial action</string>
	<string name="pref_confirm_summary">Confirm before shutting down or restarting your device</string>
	<string name="pref_confirm_key" translatable="false">confirm</string>

	<string name="pref_install_title">Install as system app</string>
	<string name="pref_install_summary">Improve compatibility and, in some case, performance</string>
	<string name="pref_uninstall_title">Undo system app installation</string>
	<string name="pref_uninstall_summary">Remove the app from system partition. Required before you could remove this app</string>
	<string name="pref_install_key" translatable="false">install</string>

	<string name="pref_dark_theme_key" translatable="false">dark_theme</string>
	<string name="pref_dark_theme_title">Dark theme</string>
	<string name="pref_dark_theme_summary_on">Using dark theme</string>
	<string name="pref_dark_theme_summary_off">Using light theme</string>

	<string name="pref_experimental_category">Experimental</string>

	<string name="pref_soft_reboot_title">Enable soft reboot</string>
	<string name="pref_soft_reboot_na_summary">Require busybox</string>
	<string name="pref_soft_reboot_summary">Press and hold reboot button to kill the zygote process</string>
	<string name="pref_soft_reboot_key" translatable="false">soft_reboot</string>

	<string name="pref_override_system_menu_title">Override system power menu</string>
	<string name="pref_override_system_menu_summary_false">Launch the system power menu while long pressing power button</string>
	<string name="pref_override_system_menu_summary_true">Launch this app while long pressing power button. May not be compatible with all devices</string>
	<string name="pref_override_system_menu_key" translatable="false">override_system_menu</string>

	<string name="pref_native_screenshot_key" translatable="false">native_screenshot</string>
	<string name="pref_native_screenshot_title">Native screenshot</string>
	<string name="pref_native_screenshot_summary_on">Using native</string>
	<string name="pref_native_screenshot_summary_off">Using legacy</string>

	<string name="pref_about_category">About</string>

	<string name="pref_request_overlay_permission_key" translatable="false">request_overlay_permission</string>

	<string name="about_version_key" translatable="false">version</string>
	<string name="about_version_title">Version</string>

	<string name="about_source_title">Source code</string>
	<string name="about_source_summary" translatable="false">https://github.com/nkming2/power-menu</string>

	<string name="about_translator_key" translatable="false">translator</string>
	<string name="about_translator_title">Translator</string>
	<string name="about_translator_credit"></string>
	<string name="about_translator_help" translatable="false">Help translating to your language \u263A</string>
	<string name="about_translator_help_url" translatable="false">https://github.com/nkming2/power-menu/blob/master/src/main/res/values/strings.xml</string>

	<string name="notification_ticker">Persistent power menu enabled</string>
	<string name="notification_title">@string/app_name</string>
	<string name="notification_text">Persistent view service</string>
	<string name="notification_action_hide">Hide</string>
	<string name="notification_channel_name">Persistent View Service</string>
	<string name="notification_channel_description">Keep the persistent view active</string>

	<string name="screenshot_notification_ticker">Screenshot captured</string>
	<string name="screenshot_notification_title">@string/screenshot_notification_ticker</string>
	<string name="screenshot_notification_text">Touch to view your screenshot</string>
	<string name="screenshot_notification_share">Share</string>
	<string name="screenshot_notification_share_chooser">Share with</string>
	<string name="screenshot_notification_delete">Delete</string>
	<string name="screenshot_notification_channel_name">Screenshot</string>
	<string name="screenshot_notification_channel_description">Screenshot taken with this app</string>

	<string name="system_override_notif_title" translatable="false">@string/app_name</string>
	<string name="system_override_notif_text">System override service</string>
	<string name="system_override_notif_action_hide" translatable="false">@string/notification_action_hide</string>
	<string name="system_override_notif_channel_name">System Override Service</string>
	<string name="system_override_notif_channel_description" translatable="false">@string/pref_override_system_menu_title</string>

	<string name="affinity_main" translatable="false">com.nkming.powermenu.MAIN</string>
	<string name="affinity_install" translatable="false">com.nkming.powermenu.INSTALL</string>
	<string name="affinity_pref" translatable="false">com.nkming.powermenu.PREF</string>

	<string name="activity_label_shutdown">Shutdown</string>
	<string name="activity_label_reboot">Reboot</string>
	<string name="activity_label_reboot_recovery">Reboot(Recovery)</string>
	<string name="activity_label_reboot_bootloader">Reboot(Bootloader)</string>
	<string name="activity_label_soft_reboot">Soft Reboot</string>
	<string name="activity_label_sleep">Sleep</string>
	<string name="activity_label_screenshot">Screenshot</string>
</resources>
