<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
		android:title="@string/pref_persistent_view_category">

		<CheckBoxPreference
			android:key="@string/pref_persistent_view_key"
			android:title="@string/pref_persistent_view_title"
			android:summary="@string/pref_persistent_view_summary"
			android:defaultValue="false"/>

		<CheckBoxPreference
			android:key="@string/pref_autohide_persistent_view_key"
			android:title="@string/pref_autohide_persistent_view_title"
			android:summary="@string/pref_autohide_persistent_view_summary"
			android:dependency="@string/pref_persistent_view_key"
			android:defaultValue="false"/>
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/pref_others_category">

		<CheckBoxPreference
			android:key="@string/pref_hide_launcher_key"
			android:title="@string/pref_hide_launcher_title"
			android:defaultValue="false"/>

		<PreferenceScreen
			android:title="@string/pref_uninstall_title"
			android:summary="@string/pref_uninstall_summary">

			<intent
				android:targetPackage="com.nkming.powermenu"
				android:targetClass="com.nkming.powermenu.InstallActivity"
				android:data="@string/data_uninstall"/>
		</PreferenceScreen>
	</PreferenceCategory>
</PreferenceScreen>