<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<com.nkming.powermenu.RevealView
		android:id="@+id/reveal"
		android:layout_width="match_parent"
		android:layout_height="match_parent"/>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<com.shamanland.fab.FloatingActionButton
			android:id="@+id/sleep_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp"
			android:layout_centerInParent="true"
			android:src="@drawable/ic_action_sleep"
			app:floatingActionButtonColor="@color/sleep_bg"
			app:floatingActionButtonSize="normal"/>

		<com.shamanland.fab.FloatingActionButton
			android:id="@+id/shutdown_id"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp"
			android:layout_toLeftOf="@id/sleep_btn"
			android:layout_alignTop="@id/sleep_btn"
			android:src="@drawable/ic_action_shutdown"
			app:floatingActionButtonColor="@color/shutdown_bg"
			app:floatingActionButtonSize="normal"/>

		<com.shamanland.fab.FloatingActionButton
			android:id="@+id/restart_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp"
			android:layout_toRightOf="@id/sleep_btn"
			android:layout_alignTop="@id/sleep_btn"
			android:src="@drawable/ic_action_restart"
			app:floatingActionButtonColor="@color/restart_bg"
			app:floatingActionButtonSize="normal"/>

		<TextView
			android:id="@+id/restart_normal_label"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_marginRight="8dp"
			android:layout_toLeftOf="@id/restart_btn"
			android:layout_alignTop="@id/restart_btn"
			android:layout_alignBottom="@id/restart_btn"
			android:gravity="center_vertical"
			android:visibility="invisible"
			android:clickable="false"
			android:focusable="false"
			android:textAppearance="@style/TextAppearance.AppCompat.Body2"
			android:text="@string/restart_mode_normal"/>

		<com.shamanland.fab.FloatingActionButton
			android:id="@+id/restart_recovery_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:layout_marginRight="8dp"
			android:layout_above="@id/restart_btn"
			android:layout_alignRight="@id/restart_btn"
			android:padding="0dp"
			android:visibility="invisible"
			android:src="@drawable/ic_action_restart_recovery"
			app:floatingActionButtonColor="@color/restart_bg"
			app:floatingActionButtonSize="mini"/>

		<TextView
			android:id="@+id/restart_recovery_label"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_toLeftOf="@id/restart_recovery_btn"
			android:layout_alignTop="@id/restart_recovery_btn"
			android:layout_alignBottom="@id/restart_recovery_btn"
			android:layout_alignRight="@id/restart_normal_label"
			android:gravity="center_vertical"
			android:visibility="invisible"
			android:clickable="false"
			android:focusable="false"
			android:textAppearance="@style/TextAppearance.AppCompat.Body2"
			android:text="@string/restart_mode_recovery"/>

		<com.shamanland.fab.FloatingActionButton
			android:id="@+id/restart_bootloader_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:layout_marginRight="8dp"
			android:layout_above="@id/restart_recovery_btn"
			android:layout_alignRight="@id/restart_btn"
			android:padding="0dp"
			android:visibility="invisible"
			android:src="@drawable/ic_action_restart_bootloader"
			app:floatingActionButtonColor="@color/restart_bg"
			app:floatingActionButtonSize="mini"/>

		<TextView
			android:id="@+id/restart_bootloader_label"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_toLeftOf="@id/restart_bootloader_btn"
			android:layout_alignTop="@id/restart_bootloader_btn"
			android:layout_alignBottom="@id/restart_bootloader_btn"
			android:layout_alignRight="@id/restart_normal_label"
			android:gravity="center_vertical"
			android:visibility="invisible"
			android:clickable="false"
			android:focusable="false"
			android:textAppearance="@style/TextAppearance.AppCompat.Body2"
			android:text="@string/restart_mode_bootloader"/>
	</RelativeLayout>
</FrameLayout>
